# weir

./: .gitattributes  .gitignore  LeanAzure.lean  LeanNetworking.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean
azverify/: .gitignore  Dockerfile  dune-project  verifier.opam
azverify/check/: check_rules.ml  check_rules.mli  dune
azverify/engine/: bdd.ml  bdd.mli  complete_route_table.ml  diff.mli  dune  effective_nsg.ml  effective_nsg.mli  effective_route_table.ml  effective_route_table.mli  encoder.ml  encoder.mli  hsa.ml  hsa.mli  route_partition.ml  route_partition.mli  timing.ml  utils.ml
azverify/engine/bench/: bench.ml  dune
azverify/engine/lib/: dune  hsa.ml  hsa.mli
azverify/engine/test/: dune  test_complete_route_table.ml  test_effective_route_table.ml  test_encoder.ml  test_hsa.ml  test_hsa_integration.ml  test_route_partition.ml
azverify/parser/: azure_types.ml  azure_types.mli  network_types.ml  network_types.mli  smt_ir.ml  smt_ir.mli  smt_to_file.ml  tf_types.ml  tf_types.mli
azverify/parser/AzureIR/: cidrworld.ml  cidrworld.mli  nic.ml  nic.mli  nsg.ml  nsg.mli  pip.ml  route_table.ml  route_table.mli  subnet.ml  subnet.mli
azverify/parser/Frontends/: AzureTF.ml  AzureTF.mli  dune
azverify/parser/TerraformIR/: asg.mli  association.ml  association.mli  dune  ipworld.mli  nic.ml  nic.mli  nsg.ml  nsg.mli  rg.ml  rg.mli  route_table.ml  route_table.mli  vnet.ml  (+4 more)
azverify/reference/: packet.mli  reachability.mli
azverify/report/: constraints.ml  constraints.mli  diff.ml  diff.mli  dune  reachability.ml  reachability.mli
(+227 files in other folders)
