(test
 (name test_route_partition)
 (libraries
  engine
  parser
  terraform_ir
  ounit2))

(test
 (name test_effective_route_table)
 (libraries
  engine
  parser
  terraform_ir
  ounit2))

(test
  (name test_encoder)
  (libraries
   engine
   ounit2))

(test
  (name test_hsa)
  (libraries
   engine
   parser
   terraform_ir
   ounit2))

(test
  (name test_hsa_integration)
  (libraries
   engine
   frontends
   parser
   terraform_ir
   ounit2)
  (deps (source_tree test_plans)))
